feature(src): создана основная структура проекта

--- a/src/DeskPlugin/Desk/App.xaml
+++ b/src/DeskPlugin/Desk/App.xaml
@@ -1,8 +1,5 @@
-﻿<Application x:Class="DeskPlugin.App"
+﻿<Application x:Class="Desk.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+             StartupUri="Views/Windows/MainWindow.xaml">
 </Application>
