feature(Desk): добавлены кастомные кисти (сплошная, градиентная)

--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -16,6 +16,10 @@
 
     <Window.Resources>
         <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="../../Dictionaries/BrushesDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+
             <converters:LegTypeToImageSourceConverter x:Key="LegTypeToImageSourceConverter"/>
         </ResourceDictionary>
     </Window.Resources>
