--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -18,6 +18,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../../Dictionaries/BrushesDictionary.xaml"/>
+                <ResourceDictionary Source="../../Dictionaries/MainWindowStyleDictionary.xaml"/>
                 <ResourceDictionary Source="../../Dictionaries/ComboBoxStylesDictionary.xaml"/>
                 <ResourceDictionary Source="../../Dictionaries/GroupBoxStylesDictionary.xaml"/>
                 <ResourceDictionary Source="../../Dictionaries/ButtonStylesDictionary.xaml"/>
@@ -26,6 +27,10 @@
             <converters:LegTypeToImageSourceConverter x:Key="LegTypeToImageSourceConverter"/>
         </ResourceDictionary>
     </Window.Resources>
+
+    <Window.Style>
+        <Style TargetType="{x:Type Window}" BasedOn="{StaticResource MainWindowStyle}"/>
+    </Window.Style>
 
     <Grid>
         <Grid.ColumnDefinitions>
