feature(DeskParameters): добавлен класс группы параметров модели

--- a/src/DeskPlugin/Desk/Views/UserControls/ParameterGroupControl.xaml
+++ b/src/DeskPlugin/Desk/Views/UserControls/ParameterGroupControl.xaml
@@ -3,12 +3,21 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:Desk.Views.UserControls"
+             xmlns:parameters="clr-namespace:DeskParameters;assembly=DeskParameters"
+             d:DataContext="{d:DesignInstance parameters:ParameterGroup}"
              mc:Ignorable="d" 
              Width="Auto"
              Height="Auto">
     <Grid>
-        <GroupBox Grid.Row="0" Grid.Column="0">
-
+        <GroupBox Grid.Row="0" Grid.Column="0" Header="{Binding Name}">
+            <ItemsControl ItemsSource="{Binding Parameters}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <local:ParameterControl/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </GroupBox>
     </Grid>
 </UserControl>
