--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -7,6 +7,8 @@
     xmlns:converters="clr-namespace:Desk.Converters"
     xmlns:userControls="clr-namespace:Desk.Views.UserControls"
     xmlns:viewModel="clr-namespace:DeskViewModel;assembly=DeskViewModel"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
+    xmlns:enums="clr-namespace:DeskParameters.Enums;assembly=DeskParameters"
     Title="Desk Plugin"
     Width="700" Height="490"
     MinWidth="700" MinHeight="490"
@@ -31,6 +33,14 @@
             </ResourceDictionary.MergedDictionaries>
 
             <converters:LegTypeToImageSourceConverter x:Key="LegTypeToImageSourceConverter"/>
+
+            <ObjectDataProvider x:Key="LegTypeEnumData" MethodName="GetValues" ObjectType="{x:Type 
+                system:Enum}">
+                <ObjectDataProvider.MethodParameters>
+                    <x:Type TypeName="enums:LegType"/>
+                </ObjectDataProvider.MethodParameters>
+            </ObjectDataProvider>
+
         </ResourceDictionary>
     </Window.Resources>
 
@@ -70,6 +80,7 @@
                     <ComboBox 
                         x:Name="LegTypeComboBox" 
                         Margin="5,0,5,5"
+                        ItemsSource="{Binding Source={StaticResource LegTypeEnumData}}"
                         SelectedItem="{Binding Parameters.LegType, Mode=TwoWay}"
                         IsEditable="False"/>
                     <ItemsControl ItemsSource="{Binding Parameters[1].Parameters}">
