feature(DeskParameters): реализация интерфейса ICloneable в классе параметра

--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -114,7 +114,9 @@
                 Grid.Column="0" 
                 Grid.ColumnSpan="2" 
                 Style="{StaticResource BuildModelButtonStyle}"
-                Content="Build 3D-model"/>
+                Content="Build 3D-model" 
+                Command="{Binding BuildModelCommand}" CommandParameter="{Binding Parameters}" 
+                IsEnabled="{Binding IsDataValid, UpdateSourceTrigger=PropertyChanged}"/>
 
         </Grid>
 
