feature(DeskViewModel): написаны команды для установки минимальных, средних и максимальных значений параметров модели

--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -103,9 +103,9 @@
                 Grid.Column="1" 
                 Header="Default Parameters">
                 <StackPanel>
-                    <Button Content="Minimum"/>
-                    <Button Content="Average"/>
-                    <Button Content="Maximum"/>
+                    <Button Content="Minimum" Command="{Binding SetMinimumParametersCommand}"/>
+                    <Button Content="Average" Command="{Binding SetAverageParametersCommand}"/>
+                    <Button Content="Maximum" Command="{Binding SetMaximumParametersCommand}"/>
                 </StackPanel>
             </GroupBox>
 
