--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -6,9 +6,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:Desk.Converters"
     xmlns:userControls="clr-namespace:Desk.Views.UserControls"
+    xmlns:enums="clr-namespace:DeskParameters.Enums;assembly=DeskParameters"
     xmlns:viewModel="clr-namespace:DeskViewModel;assembly=DeskViewModel"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
-    xmlns:enums="clr-namespace:DeskParameters.Enums;assembly=DeskParameters"
     Title="Desk Plugin"
     Width="700" Height="490"
     MinWidth="700" MinHeight="490"
@@ -18,9 +18,9 @@
     mc:Ignorable="d"
     Background="#f0f0f0">
 
-    <!--<Window.DataContext>
-        <viewModel:MainWindowViewModel/>
-    </Window.DataContext>-->
+    <Window.DataContext>
+        <viewModel:MainWindowViewModel x:Name="MainWindowViewModel"/>
+    </Window.DataContext>
 
     <Window.Resources>
         <ResourceDictionary>
@@ -34,12 +34,12 @@
 
             <converters:LegTypeToImageSourceConverter x:Key="LegTypeToImageSourceConverter"/>
 
-            <!--<ObjectDataProvider x:Key="LegTypeEnumData" MethodName="GetValues" ObjectType="{x:Type 
+            <ObjectDataProvider x:Key="LegTypeEnumData" MethodName="GetValues" ObjectType="{x:Type 
                 system:Enum}">
                 <ObjectDataProvider.MethodParameters>
                     <x:Type TypeName="enums:LegType"/>
                 </ObjectDataProvider.MethodParameters>
-            </ObjectDataProvider>-->
+            </ObjectDataProvider>
 
         </ResourceDictionary>
     </Window.Resources>
@@ -80,9 +80,9 @@
                     <ComboBox 
                         x:Name="LegTypeComboBox" 
                         Margin="5,0,5,5"
+                        ItemsSource="{Binding Source={StaticResource LegTypeEnumData}}"
                         SelectedItem="{Binding Parameters.LegType, Mode=TwoWay}"
                         IsEditable="False"/>
-                    <!--ItemsSource="{Binding Source={StaticResource LegTypeEnumData}}"-->
                     <ItemsControl ItemsSource="{Binding Parameters[1].Parameters}">
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
