--- a/src/DeskPlugin/Desk/Views/UserControls/ParameterGroupControl.xaml
+++ b/src/DeskPlugin/Desk/Views/UserControls/ParameterGroupControl.xaml
@@ -1,17 +1,19 @@
-﻿<UserControl x:Class="Desk.Views.UserControls.ParameterGroupControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:local="clr-namespace:Desk.Views.UserControls"
-             xmlns:parameters="clr-namespace:DeskParameters;assembly=DeskParameters"
-             d:DataContext="{d:DesignInstance parameters:ParameterGroup}"
-             mc:Ignorable="d" 
-             Width="Auto"
-             Height="Auto">
+﻿<UserControl 
+    x:Class="Desk.Views.UserControls.ParameterGroupControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Desk.Views.UserControls"
+    mc:Ignorable="d"
+    Width="Auto"
+    Height="Auto">
     <Grid>
-        <GroupBox Grid.Row="0" Grid.Column="0" Header="{Binding Name}">
-            <ItemsControl ItemsSource="{Binding Parameters}">
+        <GroupBox
+            Grid.Row="0"
+            Grid.Column="0"
+            Header="{Binding Key}">
+            <ItemsControl ItemsSource="{Binding Value}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <local:ParameterControl/>
