fix(DeskPlugin): рефакторинг

--- a/src/DeskPlugin/Desk/Views/UserControls/ParameterControl.xaml
+++ b/src/DeskPlugin/Desk/Views/UserControls/ParameterControl.xaml
@@ -7,8 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:behaviors="clr-namespace:Desk.Behaviors"
     xmlns:validationRules="clr-namespace:Desk.ValidationRules"
-    xmlns:parameters="clr-namespace:DeskParameters;assembly=DeskParameters"
-    d:DataContext="{d:DesignInstance parameters:Parameter}"
+    xmlns:parameters="clr-namespace:Parameters;assembly=Parameters"
+    d:DataContext="{d:DesignInstance parameters:DeskParameter}"
     Width="160"
     Height="60"
     FontSize="12"
