--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -6,8 +6,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converters="clr-namespace:Desk.Converters"
     xmlns:userControls="clr-namespace:Desk.Views.UserControls"
-    xmlns:enums="clr-namespace:DeskParameters.Enums;assembly=DeskParameters"
-    xmlns:viewModel="clr-namespace:DeskViewModel;assembly=DeskViewModel"
+    xmlns:enums="clr-namespace:Parameters.Enums;assembly=Parameters"
+    xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
     Title="Desk Plugin"
     Width="700" Height="490"
