--- a/src/DeskPlugin/Desk/App.xaml
+++ b/src/DeskPlugin/Desk/App.xaml
@@ -1,6 +1,6 @@
 ﻿<Application x:Class="Desk.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/Windows/MainWindow.xaml">
+             Startup="OnStartup">
 
 </Application>
