--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -9,19 +9,16 @@
     xmlns:enums="clr-namespace:Parameters.Enums;assembly=Parameters"
     xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
+    xmlns:services="clr-namespace:Desk.Services"
     Title="Desk Plugin"
+    DataContext="{services:ViewModelProvider viewModel:MainWindowViewModel}"
     Width="700" Height="490"
     MinWidth="700" MinHeight="490"
     MaxWidth="700" MaxHeight="490"
     FontSize="12"
-    Icon="/desk.ico"
+    Icon="pack://application:,,,/Desk;component/desk.ico"
     mc:Ignorable="d"
-    Background="#f0f0f0"
-    d:DataContext="{d:DesignInstance viewModel:MainWindowViewModel, IsDesignTimeCreatable=True}">
-
-    <Window.DataContext>
-        <viewModel:MainWindowViewModel x:Name="MainWindowViewModel"/>
-    </Window.DataContext>
+    Background="#f0f0f0">
 
     <Window.Resources>
         <ResourceDictionary>
