fix(ViewModel): переименован проект

--- a/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
+++ b/src/DeskPlugin/Desk/Views/Windows/MainWindow.xaml
@@ -7,11 +7,11 @@
     xmlns:converters="clr-namespace:Desk.Converters"
     xmlns:userControls="clr-namespace:Desk.Views.UserControls"
     xmlns:enums="clr-namespace:Parameters.Enums;assembly=Parameters"
-    xmlns:viewModel="clr-namespace:ViewModel;assembly=ViewModel"
     xmlns:system="clr-namespace:System;assembly=mscorlib"
     xmlns:services="clr-namespace:Desk.Services"
+    xmlns:viewModels="clr-namespace:ViewModels;assembly=ViewModels"
     Title="Desk Plugin"
-    DataContext="{services:ViewModelProvider viewModel:MainWindowViewModel}"
+    DataContext="{services:ViewModelProvider viewModels:MainWindowViewModel}"
     Width="700" Height="490"
     MinWidth="700" MinHeight="490"
     MaxWidth="700" MaxHeight="490"
